Closed
Bug 904012
Opened 12 years ago
Closed 12 years ago
remove a bogus assertion from ThebesLayerBuilder
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla26
People
(Reporter: nrc, Assigned: nrc)
References
Details
Attachments
(1 file)
1.10 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Assignee | ||
Comment 1•12 years ago
|
||
This assertion is bogus. It asserts that we should not have an azure buffer when we have a thebes dest buffer. The situation arises because we start with no texture client, therefore we cannot tell whether it will be safe to use Azure and we ere on the side of caution and say no. Thus we create destBuffer, rather than destDTBuffer. In the process of creating destBuffer, we create a texture host. If that texture host can support Azure, then we fail this assert. But there is nothing wrong. And on the next frame we will get an azure buffer as expected (because in EndPaint we call SetBufferProvider(nullptr) which nulls out mBuffer and mDTBuffer so we will request a DrawTarget.
Please lets kill Thebes here asap.
Attachment #788871 -
Flags: review?(matt.woodrow)
Updated•12 years ago
|
Attachment #788871 -
Flags: review?(matt.woodrow) → review+
Assignee | ||
Comment 2•12 years ago
|
||
Comment 3•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in
before you can comment on or make changes to this bug.
Description
•