Bug 904012. Remove a bogus assertion from ThebesLayerBuffer. r=mattwoodrow