gfx/layers/ThebesLayerBuffer.cpp
@@ -684,7 +684,6 @@ ThebesLayerBuffer::BeginPaint(ThebesLayer* aLayer, ContentType aContentType,
       }
     }
 
-    MOZ_ASSERT(!IsAzureBuffer());
     mBuffer = destBuffer.forget();
     mDTBuffer = nullptr;
     mBufferRect = destBufferRect;
